persiapan upload story v1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,11 @@
             android:name=".view.main.DetailStoryActivity"
             android:label="Detail Story">
         </activity>
+        <activity
+            android:name=".view.upload.AddActivity"
+            android:label="Add">
+        </activity>
+
 
     </application>
 
